Tue Apr 25 13:35:12 2017  Jiri (George) Lebl <jirka@5z.com>

	* examples/complex-analysis-mesh.gel: forgot to define function,
	  also default to rectangle (this was comitted before)

	* examples/vibrating-drumhead-modes.gel: speed up the animation
	  (this was comitted before)

	* examples/peano-restrictions.gel: New example showing the
	  restrictions to lines as an animation.

	* examples/peano.gel: improve explanation, draw more points

Tue Apr 18 17:43:13 2017  Jiri (George) Lebl <jirka@5z.com>

	* autogen.sh, configure.ac, Makefile.am: Remove gnome-common
	  dependency, and kill the documentation nonsense

	* help/*: completely revamp how this is done, making it a lot simpler
	  (and simpler minded).  Help is now HTML and displayed in a browser
	  therefore it actually always works regardless of desktop and the
	  current brokenness of yelp (meaning links now really do work)

	* src/gnome-genius.c: the help is now HTML so use that

	* src/*.c: fix a few warnings

	* help/cs/cs.po: fix broken xml tag

Tue Apr 18 12:44:38 2017  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fix error checking on SurfacePlotDataGrid, thanks
	  to David Binderman

Tue Apr 18 12:36:00 2017  Jiri (George) Lebl <jirka@5z.com>

	* examples/vibrating-drumhead-modes.gel: optionally draw node lines.

Mon Apr 17 13:17:45 2017  Jiri (George) Lebl <jirka@5z.com>

	* examples/vibrating-drumhead-modes.gel: again do 10 r increments,
	  but do 16 theta increments.  This way we see some of the nodelines

Fri Mar 10 13:15:25 2017  Jiri (George) Lebl <jirka@5z.com>

	* examples/dalemb-pulse.gel: Add some other example functions
	  (commented out) for playing around.

Wed Feb 15 13:13:40 2017  Jiri (George) Lebl <jirka@5z.com>

	* examples/fourier-series-*.gel: Run 10 instead of 3 iterations of
	  the animation for the Gibbs, also fix English typo in a comment
	  in the plotting example.

Tue Dec 27 15:42:39 2016  Jiri (George) Lebl <jirka@5z.com>
