@@ -1628,7 +1628,7 @@ returns 3.
          <listitem>
            <para>
              Logical xor.
-	     Returns true exactly one of
+	     Returns true if exactly one of
 	     <varname>a</varname> or <varname>b</varname> is true,
 	     else returns false.  If given numbers, nonzero numbers
 	     are treated as true.
@@ -6849,6 +6849,10 @@ divided to make all pivots 1.</para>
           <para>Get all combinations of k numbers from 1 to n as a vector of vectors.
 	  (See also <link linkend="gel-function-NextCombination">NextCombination</link>)
 </para>
+          <para>
+	    See
+	    <ulink url="http://en.wikipedia.org/wiki/Combination">Wikipedia</ulink> for more information.
+	  </para>
          </listitem>
         </varlistentry>
 
@@ -6914,7 +6918,7 @@ divided to make all pivots 1.</para>
          <listitem>
           <synopsis>FrobeniusNumber (v,arg...)</synopsis>
           <para>
-	    Calculate the Frobenius number.  That is calculate smallest
+	    Calculate the Frobenius number.  That is calculate largest
 	    number that cannot be given as a non-negative integer linear
 	    combination of a given vector of non-negative integers.
 	    The vector can be given as separate numbers or a single vector.
@@ -6922,6 +6926,7 @@ divided to make all pivots 1.</para>
 	  </para>
           <para>
 	    See
+	    <ulink url="https://en.wikipedia.org/wiki/Coin_problem">Wikipedia</ulink> or
 	    <ulink url="http://mathworld.wolfram.com/FrobeniusNumber.html">Mathworld</ulink> for more information.
 	  </para>
          </listitem>
@@ -6948,6 +6953,7 @@ divided to make all pivots 1.</para>
 	  </para>
           <para>
 	    See
+	    <ulink url="https://en.wikipedia.org/wiki/Greedy_algorithm">Wikipedia</ulink> or
 	    <ulink url="http://mathworld.wolfram.com/GreedyAlgorithm.html">Mathworld</ulink> for more information.
 	  </para>
          </listitem>
@@ -6958,7 +6964,13 @@ divided to make all pivots 1.</para>
          <listitem>
           <synopsis>HarmonicNumber (n,r)</synopsis>
           <para>Aliases: <function>HarmonicH</function></para>
-          <para>Harmonic Number, the <varname>n</varname>th harmonic number of order <varname>r</varname>.</para>
+	  <para>Harmonic Number, the <varname>n</varname>th harmonic number of order <varname>r</varname>.
+	        That is, it is the sum of <userinput>1/k^r</userinput> for <varname>k</varname>
+		from 1 to n.  Equivalent to <userinput>sum k = 1 to n do 1/k^r</userinput>.</para>
+          <para>
+	    See
+	    <ulink url="https://en.wikipedia.org/wiki/Harmonic_number">Wikipedia</ulink> for more information.
+	  </para>
          </listitem>
         </varlistentry>
 
@@ -6967,6 +6979,11 @@ divided to make all pivots 1.</para>
          <listitem>
           <synopsis>Hofstadter (n)</synopsis>
           <para>Hofstadter's function q(n) defined by q(1)=1, q(2)=1, q(n)=q(n-q(n-1))+q(n-q(n-2)).</para>
+          <para>
+	    See
+	    <ulink url="https://en.wikipedia.org/wiki/Hofstadter_sequence">Wikipedia</ulink> for more information.
+	    The sequence is <ulink url="https://oeis.org/A005185">A005185 in OEIS</ulink>.
+	  </para>
          </listitem>
         </varlistentry>
 
@@ -7029,6 +7046,10 @@ do (
 ) while not IsNull(n:=NextCombination(n,6));</userinput>
 </screen>
 	  See also <link linkend="gel-function-Combinations">Combinations</link>.
+	  </para>
+          <para>
+	    See
+	    <ulink url="http://en.wikipedia.org/wiki/Combination">Wikipedia</ulink> for more information.
 	  </para>
          </listitem>
         </varlistentry>
@@ -7768,6 +7789,7 @@ and has period <userinput>b-a</userinput>.</para>
           <para>Moebius mapping of the disk to itself mapping a to 0.</para>
           <para>
 	    See
+	    <ulink url="https://en.wikipedia.org/wiki/M%C3%B6bius_transformation">Wikipedia</ulink> or
 	    <ulink url="http://planetmath.org/MobiusTransformation">Planetmath</ulink> for more information.
           </para>
          </listitem>
@@ -7780,6 +7802,7 @@ and has period <userinput>b-a</userinput>.</para>
           <para>Moebius mapping using the cross ratio taking z2,z3,z4 to 1,0, and infinity respectively.</para>
           <para>
 	    See
+	    <ulink url="https://en.wikipedia.org/wiki/M%C3%B6bius_transformation">Wikipedia</ulink> or
 	    <ulink url="http://planetmath.org/MobiusTransformation">Planetmath</ulink> for more information.
           </para>
          </listitem>
@@ -7792,6 +7815,7 @@ and has period <userinput>b-a</userinput>.</para>
           <para>Moebius mapping using the cross ratio taking infinity to infinity and z2,z3 to 1 and 0 respectively.</para>
           <para>
 	    See
+	    <ulink url="https://en.wikipedia.org/wiki/M%C3%B6bius_transformation">Wikipedia</ulink> or
 	    <ulink url="http://planetmath.org/MobiusTransformation">Planetmath</ulink> for more information.
           </para>
          </listitem>
@@ -7804,6 +7828,7 @@ and has period <userinput>b-a</userinput>.</para>
           <para>Moebius mapping using the cross ratio taking infinity to 1 and z3,z4 to 0 and infinity respectively.</para>
           <para>
 	    See
+	    <ulink url="https://en.wikipedia.org/wiki/M%C3%B6bius_transformation">Wikipedia</ulink> or
 	    <ulink url="http://planetmath.org/MobiusTransformation">Planetmath</ulink> for more information.
           </para>
          </listitem>
@@ -7816,6 +7841,7 @@ and has period <userinput>b-a</userinput>.</para>
           <para>Moebius mapping using the cross ratio taking infinity to 0 and z2,z4 to 1 and infinity respectively.</para>
           <para>
 	    See
+	    <ulink url="https://en.wikipedia.org/wiki/M%C3%B6bius_transformation">Wikipedia</ulink> or
 	    <ulink url="http://planetmath.org/MobiusTransformation">Planetmath</ulink> for more information.
           </para>
          </listitem>
