@@ -1,3 +1,8 @@
+Wed Apr 26 17:30:29 2017  Jiri (George) Lebl <jirka@5z.com>
+
+	* help/C/genius.xml: Fixes from Anders Jonsson and some new extra
+	  links
+
 Tue Apr 25 13:35:12 2017  Jiri (George) Lebl <jirka@5z.com>
 
 	* examples/complex-analysis-mesh.gel: forgot to define function,
